--- a/src/log4cxx.properties
+++ b/src/log4cxx.properties
@@ -1,15 +1,26 @@
 log4j.rootLogger=TRACE, default
 
-
 #应用于文件回滚
 log4j.logger.default=TRACE, default
 log4j.appender.default=org.apache.log4j.RollingFileAppender
 log4j.appender.default.File=./log/default.log
-log4j.appender.default.MaxFileSize=80MB
-log4j.appender.default.MaxBackupIndex=12
+log4j.appender.default.MaxFileSize=20MB
+log4j.appender.default.MaxBackupIndex=10
 log4j.appender.default.Append=true
 log4j.appender.default.Threshold=TRACE
 log4j.appender.default.layout=org.apache.log4j.PatternLayout
-log4j.appender.default.layout.ConversionPattern=%d{HH:mm:ss,SSS} [%t] %-5p - %m%n
+log4j.appender.default.layout.ConversionPattern=%d [%t] %-5p %.16c - %m%n
 log4j.additivity.default = false
+
+
+log4j.logger.server=TRACE, server
+log4j.appender.server=org.apache.log4j.RollingFileAppender
+log4j.appender.server.File=./log/server.log
+log4j.appender.server.MaxFileSize=20MB
+log4j.appender.server.MaxBackupIndex=10
+log4j.appender.server.Append=true
+log4j.appender.server.Threshold=TRACE
+log4j.appender.server.layout=org.apache.log4j.PatternLayout
+log4j.appender.server.layout.ConversionPattern=%d [%t] %-5p %.16c - %m%n
+log4j.additivity.server = true
 
